--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Server Port
 server.port = 8000
 
-# Oracle DataSource
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/xe
+# Mysql DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/bulletinBoard?characterEncoding=UTF8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 
