--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 server.port = 8000
 
 # Mysql DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/bulletinBoard?characterEncoding=UTF8
+spring.datasource.url=jdbc:mysql://localhost:3306/bulletinBoard?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 
 # Model Location
-mybatis.type-aliases-package=com.tublanx.domain
+mybatis.type-aliases-package=com.tublanx.bulletinBoard.domain
 
 # XML Location
 mybatis.mapper-locations=classpath:mappers/*.xml
