--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.datasource.password=1234
 mybatis.type-aliases-package=com.tublanx.bulletinBoard.domain
 
 # XML Location
-mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
