--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ mybatis.type-aliases-package=com.tublanx.bulletinBoard.domain
 
 # XML Location
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+# thymeleaf
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
